--- a/iEmirati/Localizable.xcstrings
+++ b/iEmirati/Localizable.xcstrings
@@ -748,6 +748,9 @@
         }
       }
     },
+    "Tap to learn more!" : {
+
+    },
     "Tap to learn the meaning!" : {
       "localizations" : {
         "ar" : {
