--- a/iEmirati/Localizable.xcstrings
+++ b/iEmirati/Localizable.xcstrings
@@ -83,9 +83,6 @@
         }
       }
     },
-    "also known as (insert username here) on GitHub" : {
-
-    },
     "also known as MayDreemurr on GitHub" : {
 
     },
@@ -270,6 +267,9 @@
           }
         }
       }
+    },
+    "he has no GitHub account :(" : {
+
     },
     "hervill" : {
       "comment" : "location",
